# winrmexec

./: pyproject.toml
