[build-system]
  requires = ["setuptools>=68", "wheel"]
  build-backend = "setuptools.build_meta"

[project]
  name = "winrmexec"
  version = "1.0.0"
  requires-python = ">=3.8"
  description = "Impacket-only implementation of WinRM protocol with support for NTLM and Kerberos auth"
  readme = "README.md"
  authors = [{ name = "ozelis", email = "example@example.com" }]
  license = { text = "MIT" }
  keywords = [
    "winrm",
    "impacket",
    "ntlm",
    "kerberos",
    "security",
    "redteam"
  ]
  classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
  ]
  dependencies = [
    "impacket>=0.13.0",
    "requests>=2.30.0",
    "prompt_toolkit>=3.0.0"
  ]

[project.urls]
  Homepage = "https://github.com/ozelis/winrmexec"
  Source = "https://github.com/ozelis/winrmexec"

[project.scripts]
  winrmexec = "winrmexec:main"
  evil-winrmexec = "evil_winrmexec:main"

[tool.setuptools]
  py-modules = [
    "winrmexec",
    "evil_winrmexec"
  ]
